# embeddedllm

./: .env.example  .flake8  .gitignore  .prettierignore  .prettierrc  CHANGEDLOG.md  CHANGELOG.md  README.md  ellm_api_server.spec  pyproject.toml  requirements-build.txt  requirements-common.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-directml.txt  requirements-ipex.txt  requirements-lint.txt  requirements-npu.txt  requirements-openvino.txt  requirements-webui.txt  requirements-xpu.txt  setup.py
.github/ISSUE_TEMPLATE/: 01-🐛-bug-report.md  02-🚀-feature-request.md  03-📚-documentation.md  config.yaml
benchmark/: README.md  analyse_detailed_benchmark.py  benchmark.md  benchmark_throughput.py  ellm_benchmark.py  loop_analyse_detailed_benchmark.py  loop_ellm_benchmark.py  sampleText.txt
docs/model/: ipex_models.md  npu_models.md  onnxruntime_cpu_models.md  onnxruntime_directml_models.md  onnxruntime_models.md  openvino_models.md
scripts/python/: get_model.py  httpx_client.py  httpx_client_stream.py  httpx_client_vision.py  httpx_client_vision_stream.py  litellm_client.py  litellm_vision_client.py  openai_client.py  openai_vision_client.py  test_prompt_template.py
src/embeddedllm/: engine.py  inputs.py  protocol.py  sampling_params.py  utils.py
src/embeddedllm/backend/: base_engine.py  intel_npu_engine.py  ipex_engine.py  npu_engine.py  onnxruntime_engine.py  openvino_engine.py  ov_phi3_vision.py
src/embeddedllm/entrypoints/: api_server.py  chat_server.py  modelui.py  webui.py
