# See https://gitlab.liris.cnrs.fr/pagoda/tools/mkdocs_template/-/blob/master/user_config/pyproject.toml

# -----------------------------------------------------------------------------
# Pytest configuration
# https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml

[tool.pytest.ini_options]
log_cli = true
asyncio_mode = "auto"
# log_cli_level = "DEBUG"
addopts = "--cov=embeddedllm --doctest-modules"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tensorboard.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:flatbuffers.*",
]


# -----------------------------------------------------------------------------
# Black (Option-less formatter) configuration
# https://black.readthedocs.io/en/stable/index.html

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$|\.ipynb'

# -----------------------------------------------------------------------------
# For sorting imports
# This is used by VS Code to sort imports
# https://code.visualstudio.com/docs/python/editing#_sort-imports
# https://timothycrosley.github.io/isort/

[tool.isort]
# Profile
# Base profile type to use for configuration. Profiles include: black, django,
# pycharm, google, open_stack, plone, attrs, hug. As well as any shared profiles.
# Default: ``
profile = "black"
# Treat project as a git repository and ignore files listed in .gitignore
# Default: `False`
skip_gitignore = true
# The max length of an import line (used for wrapping long imports).
# Default: `79`
line_length = 99
known_first_party = []

# -----------------------------------------------------------------------------
# setuptools
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
# setuptools-scm considers all files tracked by git to be data files
requires = [
    "setuptools>=62.0", 
    "packaging",
    "setuptools>=49.4.0",
    "torch==2.3.1",
    "wheel"
]
build-backend = "setuptools.build_meta"